tests/NormalTests/paczka2/big_fuzzy/67704244.err
Error in line 2: AH1Lro A636 72,4
Error in line 7: iFHgd3TZ A962 73,5
Error in line 31: AH1Lro A636 3!1,4
Error in line 32: iFHgd3TZ S786 99,4
Error in line 28: AH1Lro A636 75,8
Error in line 40: iFHgd3TZ A561 9,3
Error in line 45: BOD A636 64,7
Error in line 54: AH1Lro S786 302,5
Error in line 64: iFHgd{TZ A6{6 {{,1
Error in line 63: H8i9OaQCeI A962 62,0
Error in line 66: Xb6IRF5MGj A636 >5,5
Error in line 67: Xb6IRF5MGj A636 63,0
Error in line 29: Ynomb A962 1330,6
Error in line 81: AH1Lro A962 74,46
Error in line 52: A561 A962 20,3
Error in line 78: H8i9OaQCeI S786 43,7
Error in line 83: AH1Lro A561 12,4
Error in line 71: BOD A962 28,6
Error in line 88: Ynomb S786 27,4
Error in line 92: Xb6IRF5MGj S786 99,5
Error in line 105: Xb6IRF5MGj A962 90,0
Error in line 108: Xb6IRF5MGj A636 68,2
Error in line 113: H8i9OaQCeI S786 80,8
Error in line 128: H8i9OaQCeI A636 60,5
Error in line 117: Xb6IRF5MGj A561 11,7
Error in line 130: Ynomb S786 79,5
Error in line 133: AH1Lro A561 99,37
Error in line 142: Xb6IRF5MGj A636 13,7
Error in line 76: iFHgd3TZ A636 246,0
Error in line 144: Xb6IRF5MGj A561 48,3
Error in line 147: Xb6IRF5MGj A636 57,3
Error in line 151: Xb6IRF5MGj S786 ?76,4
Error in line 150: A561 A962 20,2
Error in line 161: H8i9OaQCeI A636 57,3
Error in line 163: H8i9OaQCeI S786 22,9
Error in line 159: A561 A636 81,5
Error in line 169: iFHgd3TZ S786 54,0
Error in line 158: AH1Lro A561 154,5
Error in line 182: A561 A561 83,52
Error in line 167: Ynomb S786 57,9
Error in line 175: iFHgd3TZ A561 359,3
Error in line 166: A561 A561 28,6
Error in line 196: A561 S786 98,6
Error in line 200: A561 A962 16,1
Error in line 190: H8i9OaQCeI A561 159,0
Error in line 211: BOD A636 5,4
Error in line 210: H8i9OaQCeI S786 54,5
Error in line 220: Ynomb A962 71,0
Error in line 229: AH1Lro S786 85,8
Error in line 219: H8i9OaQCeI A561 57,1
Error in line 235: H8i9OaQCeI A962 62,6
Error in line 217: A561 A636 82,5
Error in line 236: H8i9OaQCeI A561 16,7
